--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass-middleware": "0.8.0",
     "passport": "^0.3.2",
     "pg": "6.0.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "vhost": "^3.0.2"
   }
 }
