--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
+    "express-session": "^1.14.0",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.8.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "6.0.1",
     "serve-favicon": "~2.3.0",
     "vhost": "^3.0.2"
