--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "basic-auth": "^1.0.4",
+    "bcrypt": "^0.8.7",
     "body-parser": "~1.15.1",
     "chart.js": "^2.1.6",
     "cookie-parser": "~1.4.3",
