--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bcrypt": "^0.8.7",
     "body-parser": "~1.15.1",
     "chart.js": "^2.1.6",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
+    "express-flash": "0.0.2",
     "express-session": "^1.14.0",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.8.0",
