--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "6.0.1",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "~2.3.0"
 //    "vhost": "^3.0.2"
   }
 }
