--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "6.0.1",
+    "pg-promise": "^5.2.5",
     "serve-favicon": "~2.3.0"
   }
 }
