--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "pg": "6.0.1",
     "pg-promise": "^5.2.5",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.8"
   }
 }
