--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^0.8.7",
     "body-parser": "~1.15.1",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^3.1.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
@@ -23,8 +24,10 @@
     "node-sass-middleware": "0.8.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.6.2",
     "pg": "6.0.1",
     "pg-promise": "^5.2.5",
+    "redis-url": "^1.2.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.8"
   }
