--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "redis-url": "^1.2.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0"
   }
 }
