--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha tests --recursive --watch"
   },
   "dependencies": {
     "aws-sdk": "^2.4.9",
@@ -18,6 +19,7 @@
     "express": "~4.13.4",
     "express-flash": "0.0.2",
     "express-session": "^1.14.0",
+    "foreman": "2.0.0",
     "fs-extra": "^0.30.0",
     "jsdoc": "^3.4.0",
     "morgan": "~1.7.0",
@@ -32,6 +34,8 @@
     "socket.io": "^1.4.8"
   },
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2",
+    "supertest": "^2.0.0"
   }
 }
