--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha tests --recursive --watch"
+    "test": "mocha tests --recursive"
   },
   "dependencies": {
     "aws-sdk": "^2.4.9",
