--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "pg-promise": "^5.2.5",
     "redis-url": "^1.2.1",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.4.8"
+    "socket.io": "1.3.7"
   },
   "devDependencies": {
     "chai": "^3.5.0",
